kubernetes/producer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge-producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: solid12/techchallengeproducer:v2
          ports:
            - containerPort: 5000
              name: http-5000
            - containerPort: 5001
              name: http-5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-producer
spec:
  selector:
    app: producer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: http-5000
    - protocol: TCP
      port: 5001
      targetPort: 5001
      name: http-5001
  type: NodePort
