kubernetes/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge-rabbitmq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: masstransit/rabbitmq
          ports:
            - containerPort: 15672
            - containerPort: 5672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: rabbitmq-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
  type: NodePort
