kubernetes/service1.yml
apiVersion: v1
kind: Service
metadata:
  name: deploy-tc-api
spec:
  type: NodePort
  selector:
    app: deploy-tc-api
  ports:
    - port: 8080
      targetPort: 80
