kubernetes/tests.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge-tests
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tests
  template:
    metadata:
      labels:
        app: tests
    spec:
      containers:
        - name: tests
          image: solid12/techchallengetests
          ports:
            - containerPort: 5000
              name: http-5000
            - containerPort: 5001
              name: http-5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-tests
spec:
  selector:
    app: tests
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: http-5000
    - protocol: TCP
      port: 5001
      targetPort: 5001
      name: http-5001
