kubernetes/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techchallenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: techchallenge.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: techchallenge-api
                port:
                  number: 8080
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /database
            pathType: Prefix
            backend:
              service:
                name: techchallenge-database
                port:
                  number: 5432
          - path: /producer
            pathType: Prefix
            backend:
              service:
                name: techchallenge-producer
                port:
                  number: 5000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: techchallenge-rabbitmq
                port:
                  number: 15672
          - path: /tests
            pathType: Prefix
            backend:
              service:
                name: techchallenge-tests
                port:
                  number: 5000
